<resources>
    <string name="app_name">k_crud</string>
    <string name="label_app_name">CRUD with Kotlin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_registration">Registro</string>
    <string name="sublabel_register">Ingresa los datos para registrar una persona.</string>
    <string name="label_names">Nombre (s) y apellidos</string>
    <string name="label_email">Correo electrónico</string>
    <string name="label_phone">Teléfono</string>
    <string name="label_male">Masculino</string>
    <string name="label_female">Femenino</string>
    <string name="label_gender">Sexo</string>
    <string name="label_register">Registrar</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_accept">Aceptar</string>
    <string name="label_back">Volver</string>
</resources>